# management-server

./: .coveragerc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  Dockerfile  Makefile  README.md  container-structure-test.yaml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  override.yml
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  ci.yml
_generated/grpc/helloworld/: helloworld_pb2.py  helloworld_pb2_grpc.py
chart/: Chart.yaml  values.schema.json  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  job.yaml  secret.yaml  service.yaml
config/: api.py  asgi.py  celery_app.py  graphql.py  urls.py
config/settings/: base.py  development.py  production.py  test.py
scripts/: start-celery-beat.sh  start-celery-worker.sh  start-flower.sh  start.sh
src/api/: dependencies.py
src/api/routers/: documents.py  users.py
src/apps/common/: admin.py  managers.py  models.py  signals.py
src/apps/documents/: admin.py  apps.py  datamodels.py
src/apps/documents/migrations/: 0001_initial.py  0002_alter_document_folder_alter_folder_name_and_more.py  0003_alter_document_options_alter_folder_options_and_more.py
src/apps/documents/models/: __init__.py  document.py  folder.py
src/apps/users/: adapters.py  admin.py  apps.py  forms.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_user_last_modified_alter_user_name.py  0004_token.py  0005_alter_token_key_alter_token_owner_and_more.py
src/apps/users/models/: __init__.py  token.py  user.py
src/common/: datamodels.py
src/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/graphql/: permissions.py
src/graphql/schemas/documents/: mutations.py  queries.py  subscriptions.py  types.py
src/graphql/schemas/users/: queries.py  types.py
src/modules/: greeter.py
src/templates/: base.html
src/utils/: context_processors.py
tests/: _helpers.py  conftest.py
tests/api/: conftest.py
tests/api/routers/: test_documents.py  test_users.py
tests/apps/: _helpers.py
tests/apps/common/: test_admin.py  test_managers.py
tests/apps/documents/: factories.py  test_admin.py
tests/apps/documents/models/: test_document.py  test_folder.py
tests/apps/users/: factories.py  test_admin.py  test_forms.py
tests/apps/users/models/: test_token.py  test_user.py
tests/graphql/: _helpers.py  conftest.py
tests/graphql/schemas/documents/: test_mutations.py  test_queries.py  test_subscriptions.py
tests/graphql/schemas/users/: test_queries.py
