[tool.poetry]
name = "kkowa-server"
version = "0.1.0"
description = "Core application server component of kkowa."
authors = []
classifiers = ["Private :: Do not Upload"]

[tool.poetry.dependencies]
argon2-cffi = "^21"
celery = "^5"
channels = "^3"
Django = "^4.1"
django-allauth = "^0"
django-anymail = { version = "^8", extras = ["mailgun"] }
django-celery-beat = "^2"
django-celery-results = "^2"
django-cors-headers = "^3"
django-crispy-forms = "^1"
django-environ = "^0"
django-filter = "^22"
django-health-check = "^3"
django-model-utils = "^4"
django-redis = "^5"
fastapi = "^0"
flower = "^1"
grpcio = "^1"
grpcio-tools = "^1"
gunicorn = "^20"
Pillow = "^9"
psutil = "^5"
psycopg2-binary = "^2"
pydantic = { version = "^1", extras = ["email"] }
python = "^3.11"
redis = { version = "^4", extras = ["hiredis"] }
strawberry-django-plus = "^1"
strawberry-graphql = "^0"
strawberry-graphql-django = "^0"
uvicorn = { version = "^0", extras = ["standard"] }
whitenoise = "^6"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
django-coverage-plugin = "*"
django-debug-toolbar = "*"
django-extensions = "*"
django-stubs = "*"
factory-boy = "*"
Faker = "*"
flake8 = "*"
flake8-isort = "*"
ipdb = "*"
mypy = "*"
pre-commit = "*"
pydocstyle = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-socket = "*"
pytest-sugar = "*"
pytest-timeout = "*"
pytest-xdist = { version = "*", extras = ["psutil"] }
types-protobuf = "*"
watchgod = "*"
Werkzeug = "*"
py = "*"                                              # https://github.com/Teemu/pytest-sugar/issues/241

[tool.black]
target-version = ["py310"]
line-length = 120
include = '\.pyi?$'
exclude = """
/(
  | migrations
  | idl
  | .venv
  | _generated
)/
"""
